# gpu-npu-util-reporter-mysql

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.example.yml  config.example.yaml  npu-exporter.xlsx
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-24-prometheus-gpu-collector.md
docs/superpowers/specs/: 2026-06-24-prometheus-gpu-collector-design.md
src/: lib.rs  main.rs  models.rs
src/config/: mod.rs
src/expr/: mod.rs
src/extractor/: align.rs  mod.rs
src/log_archive/: mod.rs
src/mapping/: mod.rs
src/scheduler/: mod.rs
src/sink/: mod.rs  schema.rs
src/source/: mod.rs
src/sql_gen/: mod.rs
tests/: integration_test.rs
tests/fixtures/: assets.csv  prom_gpu_util.json
